samples/_failures_safe/1761607696_e4d706_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cd64d37.c: In function ‘main’:
./samples/SAFE/__tmp_3cd64d37.c:206:5: error: expected expression at end of input
  206 |     if (token_count ==
      |     ^~
./samples/SAFE/__tmp_3cd64d37.c:206:5: error: expected declaration or statement at end of input
